# Difference-Calculator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci-check.yml
gendif/: __init__.py  __init__.py,cover  cli.py  cli.py,cover  formatter.py  gendiff.py  gendiff.py,cover  parcer.py  parcer.py,cover  tree.py
gendif/formatters/: __init__.py  json.py  stylish.py
gendif/scripts/: gendiff.py  gendiff.py,cover
gendiff/: __init__.py  cli.py  formatter.py  gendif.py  gendiff.py  parcer.py  tree.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendif.py  gendiff.py
tests/: conftest.py  test_json_flat.py
tests/fixtures/: plain
tests/test_cases/: test_all_cases.py  test_json.py  test_plain.py  test_stylish.py  test_stylish_plain.py
