[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "difference calculator"
authors = ["Naumenko_Sergey <sergei.naumencko@yandex.ru>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "gendif"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
pyyaml = "^6.0"


[tool.poetry.scripts]
gendif = "gendif.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
